[package]
name = "bevy-platformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = "0.8"
bevy-inspector-egui = "0.12.1"
bevy_ecs_ldtk = { version = "0.4.0", features = ["atlas"] }
heron = { version = "4.0.0", features = ["2d"] }
bevy_asset_loader = "0.12.1"